# aeternum-db

./: .gitignore  .grype.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT.md  ISSUE_TEMPLATE.md  LICENSE.md  PULL_REQUEST_TEMPLATE.md  README.md  ROADMAP.md  SECURITY.md  firewall-domains.txt  sonar-project.properties
.github/: SECURITY-ADVISORY-TEMPLATE.md  dependabot.yml
.github/workflows/: apisec-scan.yml  ci.yml  security.yml
core/: Cargo.toml  deny.toml
core/benches/: btree_bench.rs  executor_bench.rs  query_bench.rs  storage_bench.rs
core/examples/: sql_parsing.rs
core/src/: acid.rs  decimal.rs  json_engine.rs  lib.rs  main.rs  versioning.rs
core/src/executor/: aggregate.rs  context.rs  distinct.rs  dml.rs  expressions.rs  filter.rs  join.rs  limit.rs  mod.rs  physical_plan.rs  project.rs  record_batch.rs  scan.rs  sort.rs  unnest.rs  values.rs
core/src/index/: btree.rs  btree_iterator.rs  btree_node.rs  mod.rs
core/src/index/btree/: iterator.rs  mod.rs  node.rs
core/src/query/: cost_model.rs  explain.rs  logical_plan.rs  mod.rs  optimizer.rs  physical_plan.rs  statistics.rs
core/src/query/rules/: mod.rs  pushdown.rs
core/src/sql/: ast.rs  dialect.rs  mod.rs  parser.rs  validator.rs
core/src/storage/: buffer_pool.rs  file_manager.rs  mod.rs  page.rs
core/tests/: btree_tests.rs  executor_tests.rs  integration_test.rs  query_planner_tests.rs  sql_parser_tests.rs  storage_tests.rs
deployment/container/: Dockerfile  README.md  kubernetes.yaml
deployment/lite/: README.md
deployment/serverless/: README.md
docs/: IMPLEMENTATION_INDEX.md  IMPLEMENTATION_PLAN.md  PR_GUIDE.md  README.md  btree-design.md  btree-usage.md  explain.md  phase1-prs.md  phase2-prs.md  phases-overview.md  query-optimization.md  sql-reference.md  storage-architecture.md
docs/prs/: PR-1.1-storage-engine.md  PR-1.10-tuple-format.md  PR-1.11-network-protocol.md  PR-1.12-configuration-system.md  PR-1.13-logging-diagnostics.md  PR-1.14-integration-tests.md  PR-1.2-btree-index.md  PR-1.3-sql-parser.md  PR-1.4-query-planner.md  PR-1.5-query-executor.md  PR-1.6-catalog-schema.md  PR-1.7-transaction-manager.md  PR-1.8-wal.md  PR-1.9-data-types.md  PR-2.1-wasm-runtime.md  PR-2.2-extension-api.md  PR-2.3-extension-manager.md  PR-2.4-hello-world-extension.md  PR-2.5-graphql-extension.md  PR-2.6-extension-security.md  PR-2.7-extension-sdk.md  PR-2.8-extension-monitoring.md  PR-3.1-distribution-cluster.md  PR-4.1-sql-grammar-extensions.md  README.md
drivers/binary/: README.md
drivers/grpc/: README.md
drivers/jdbc/: README.md
extensions/: README.md
tests/: README.md
(+8 files in other folders)
