[package]
name = "aeternumdb-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["AeternumDB Contributors"]
description = "High-performance, extensible database management system core engine"
repository = "https://github.com/schivei/aeternum-db"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.12"
prost = "0.13"
wasm-bindgen = "0.2"
rust_decimal = "1.36"
sqlparser = "0.52"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "aeternumdb"
path = "src/main.rs"
