[package]
name = "aeternumdb-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["AeternumDB Contributors"]
description = "High-performance, extensible database management system core engine"
repository = "https://github.com/schivei/aeternum-db"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.14"
prost = "0.14"
wasm-bindgen = "0.2"
rust_decimal = "1.41"
sqlparser = "0.61"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.3"
parking_lot = "0.12"
async-stream = "0.3"
futures = "0.3"
hashbrown = "0.14"
async-trait = "0.1"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.8", features = ["async_tokio"] }
tempfile = "3.8"

[build-dependencies]
tonic-build = "0.14"

[[bin]]
name = "aeternumdb"
path = "src/main.rs"

[lib]
name = "aeternumdb_core"
path = "src/lib.rs"

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "btree_bench"
harness = false

[[bench]]
name = "query_bench"
harness = false

[[bench]]
name = "executor_bench"
harness = false
